<resources>
    <string name="app_name">Paperless</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">邮箱格式不正确</string>
    <string name="error_invalid_password">请输入6位数以上的密码</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">请输入账号</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <!--管理员-->
    <string name="title_setting">系统设置</string>
    <string name="title_prepare">会前准备</string>
    <string name="title_control">会中控制</string>
    <string name="title_settle">会后整理</string>
    <string name="title_user">当前用户：</string>
    <string name="meeting_state">会议状态：</string>
    <!--系统设置-->
    <string name="device_management">设备管理</string>
    <string name="meetint_room_management">会议室管理</string>
    <string name="seating_arrangement">座位排布</string>
    <string name="secretary_management">秘书管理</string>
    <string name="frequently_used_attendees">常用参会人</string>
    <string name="other_setting">其它设置</string>
    <!--批注页面-->
    <string name="postil_1">保存本地</string>
    <string name="postil_2">保存服务器</string>
    <string name="postil_3">截图批注</string>
    <string name="postil_4">发起同屏</string>
    <string name="postil_5">停止同屏</string>
    <string name="postil_6">发起投影</string>
    <string name="postil_7">停止投影</string>
    <string name="postil_8">上一张</string>
    <string name="postil_9">下一张</string>
    <!--同屏控制-->
    <string name="screen_title">同屏控制</string>
    <!--文件的标题-->
    <string name="number">序号</string>
    <string name="file_name">文件名</string>
    <string name="size">大小</string>
    <string name="upload">上传</string>
    <!--Fab 文本-->
    <string name="screen_control">同屏控制</string>
    <string name="model">模式</string>
    <string name="every_one">所有人</string>
    <string name="choose_player">选择参会人</string>
    <string name="projection">投影</string>
    <string name="all_projection">所有投影机</string>
    <string name="choose_projection">选择投影机</string>
    <string name="join_screen">加入同屏</string>
    <string name="cancel">取消</string>
    <!--投影控制-->
    <string name="pro_control">投影控制</string>
    <string name="apply_pro">申请投影</string>
    <string name="stop_pro">结束投影</string>
    <!--投影机列表-->
    <string name="all_choose">全选</string>
    <string name="ensure">确定</string>
    <string name="exit">退出</string>
    <string name="meet_note">会议笔记</string>
    <string name="clear_all">清空内容</string>
    <string name="import_note">导入</string>
    <string name="back">返回</string>
    <string name="call_serve">呼叫服务</string>
    <string name="screen_shot">截图批注</string>
    <string name="input_file_name">请输入新的文件名 :</string>
    <string name="web_goto">前往</string>
    <string name="canjoin">可加入</string>
    <string name="member">参会人</string>
    <string name="projector">投影机</string>

    <!--代码中-->
    <string name="please_enter_file_name">请输入文件名</string>
</resources>
