<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/number" />

    <ImageView
        app:layout_heightPercent="30%"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="@color/divLineColor" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_weight="3"
        android:gravity="center|left"
        android:text="@string/file_name" />

    <ImageView

        app:layout_heightPercent="30%"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="@color/divLineColor" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/size" />

    <ImageView
        app:layout_heightPercent="30%"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="@color/divLineColor" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/upload" />

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2" />
</com.zhy.android.percent.support.PercentLinearLayout>