<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/pro_control"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dialogmodule"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/all_pro_cb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_weight="1"
                        android:button="@drawable/select_check"
                        android:padding="5dp"
                        android:text="@string/all_projection"
                        android:textColor="@android:color/black" />

                    <RadioButton
                        android:id="@+id/choose_pro_cb"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/select_check"
                        android:padding="5dp"
                        android:text="@string/choose_projection"
                        android:textColor="@android:color/black" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp">

                <Button
                    android:id="@+id/start_pro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/select_press"
                    android:text="@string/apply_pro"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/stop_pro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/select_press"
                    android:text="@string/stop_pro"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/pro_cancel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/btn_enter"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>