<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/fab_bg_shape"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/keyboard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/screens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableTop="@drawable/screenshot"
            android:gravity="center"
            android:text="@string/screen_shot"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/handwritten"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/one_screen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/sscreen"
            android:gravity="center"
            android:text="@string/screen_control"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/back_pop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/back_pop"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/projection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/projective"
            android:gravity="center"
            android:text="@string/pro_control"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/one_screen"
            android:layout_weight="3"
            android:clickable="true"
            android:gravity="center"
            android:drawableTop="@drawable/note"
            android:text="@string/meet_note"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/call_service"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/note"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:drawableTop="@drawable/service"
            android:text="@string/call_serve"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/whiteplate_pop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
