<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/manage_activity_id"
    android:orientation="vertical"
    tools:context="com.pa.paperless.activity.ManageActivity">

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/topbar"
        android:orientation="horizontal"
        app:layout_heightPercent="10%">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_widthPercent="70%">

            <TextView
                android:id="@+id/system_setting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="#0057d1"
                android:clickable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/title_setting"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/metting_prepare"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="#0057d1"
                android:clickable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/title_prepare"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/meeting_control"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="#0057d1"
                android:clickable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/title_control"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/meeting_manage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#0057d1"
                android:clickable="true"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/title_settle"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_widthPercent="30%">

            <TextView

                android:id="@+id/title_current_user"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="20sp"
                android:text="@string/title_user"
                android:textColor="#1e30d3"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/title_current_user"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="20sp"
                android:text="@string/title_user"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </com.zhy.android.percent.support.PercentRelativeLayout>
    </com.zhy.android.percent.support.PercentLinearLayout>

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#b2aeae"
        app:layout_heightPercent="10%">

        <TextView
            android:id="@+id/text_place"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/meeting_state"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/title_state"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/text_place"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/meeting_state"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/meeting_title_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/meeting_state"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/title_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/meeting_state"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </com.zhy.android.percent.support.PercentRelativeLayout>

    <FrameLayout
        android:id="@+id/meeting_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</com.zhy.android.percent.support.PercentLinearLayout>
